Ensure the Gallary works correctly on mobile.

--- a/src/www/css/site.css
+++ b/src/www/css/site.css
@@ -679,6 +679,10 @@ input[type="submit"] {
 }
 
 
+.splide {
+  margin: auto;
+}
+
 .splide__slide img {
   width: 100%;
   height: 100%;
